[tool.poetry]
name = "cpyrt"
version = "0.1.0"
description = "A Python library for handling data in NIST's Cybersecurity and Privacy Reference Tool JSON format."
authors = ["Al S <xee5ch@member.fsf.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"

[tool.poetry.dev-dependencies]
datamodel-code-generator = "^0.20.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
